# MAZE_ROS

./: .gitignore  Dockerfile  README.md  maze1.map  test.map
mecabot_movement/src/mecabot_bringup/: package.xml  setup.cfg  setup.py
mecabot_movement/src/mecabot_description/: CMakeLists.txt  package.xml
mecabot_movement/src/mecabot_move_pkg/: package.xml  setup.cfg  setup.py
mecabot_movement/src/mecabot_simulation/: package.xml  setup.cfg  setup.py
mecabot_movement/src/sim_test/: package.xml  setup.cfg  setup.py
mecabot_movement/src/turn_on_wheeltec_robot/: CMakeLists.txt  package.xml
research/: MappingSimulation.py  Tremuex.py  frontier_exploration.py
sim/: instructions.md  main_sim.sdf  map2sdf.py  maze1.sdf  maze2.sdf  test.sdf
src/cartographer/: CMakeLists.txt  package.xml
src/cartographer/config/: gazebo_2d.lua
src/cartographer/launch/: cartographer.launch.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: Cell.msg  Maze.msg  Step.msg
src/motion_planner/: package.xml  setup.py
src/motion_planner/motion_planner/: do_nothing.py
src/my_package0/: CMakeLists.txt  package.xml
src/my_package0/src/: my_node.cpp
src/path_finder/: package.xml  setup.py
src/test_publisher/: CMakeLists.txt  package.xml
src/test_subscriber/: CMakeLists.txt  package.xml
src/wall_finder/: package.xml  setup.cfg  setup.py
test_code/gazebo_test/: commands.md  map2sdf.py  maze2.map  maze2.sdf  relays.bash  requirements.txt  run.bash  run_all.bash  test.py  visualize_lidar.sdf
urdf/urdf/: senior_mec_robot.sdf  test.sdf  world.sdf
(+35 files in other folders)
